# libaec

./: CHANGELOG.md  CMakeLists.txt  Makefile.am  configure.ac
fuzzing/: CMakeLists.txt  fuzz_target.cc  fuzz_target_streaming.cc  fuzz_target_sz.cc
src/: CMakeLists.txt  Makefile.am  decode.c  encode.c  sz_compat.c
